# Auth0_Fastapi

./: pyproject.toml
app/: __init__.py
app/db/: orm.py  setup.py
app/models/: user.py
app/routes/: oauth2.py  users.py  utils.py
